removal of extra code

--- a/src/app/localization/locales-en.json
+++ b/src/app/localization/locales-en.json
@@ -1,1 +1,11 @@
-{}
+{
+    "webbloom": {
+        "search": "Search",
+        "bookmark": "Bookmark",
+        "viewDetail": "View Detail",
+        "removeBookmark": "Remove Bookmark",
+        "footer": {
+            "desc": "Developedn By Mian Abdur Rafay"
+        }
+    }
+}
